# ArrayBoundCheckPass

./: .gitignore  CMakeLists.txt  README.md  Report.typ  a.out  bfs.txt  check_elimination  check_elimination.txt  data_to_table.ipynb  dither.txt  floydOutput.txt  gen_baseline_stat.py  gen_compile_time_check_count.py  gen_gupta_stat.py  gen_runtime_stat.py  gen_stat.py  global  homework-template.typ  is.txt  jacobi  jacobi-1d.txt  loop.txt  main.cpp  main.typ  malloc  orderedOutput.txt  stat_gupta_size.csv  static  test
.cache/clangd/index/: ArrayAccessDetection.cpp.7051105053ABB341.idx  ArrayAccessDetection.h.C2633717A37FC2A9.idx  BoundCheckInsertion.cpp.8A792A91776DC253.idx  BoundCheckInsertion.h.5E574E72A2CD9318.idx  BoundCheckOptimization.cpp.2FB2C602FF2EBAF9.idx  BoundCheckOptimization.h.AAC2FECA35299848.idx  CommonDef.cpp.B64D90AEE0604EDF.idx  CommonDef.h.D25BA14BC2C60BB4.idx  InstPass.cpp.6194FE57A9D0B7C0.idx  Registry.cpp.C2539964F86C5C24.idx  ValueMetadataRemoval.cpp.079C27B6E32A156A.idx  ValueMetadataRemoval.h.6448E1914A6CE9A8.idx
benchmark/: CMakeLists.txt
benchmark/large_benchmark/: CMakeLists.txt
benchmark/large_benchmark/bfs/: bfs.c  run.md
benchmark/large_benchmark/dither/: ImageHelper.c  ImageHelper.h  floydDitherKernel.c  main.c  orderedDitherKernel.c  run.md
benchmark/large_benchmark/is/: is.c  run.md
benchmark/large_benchmark/jacobi-1d/: jacobi-1d.c  run.md
benchmark/micro_benchmark/: CMakeLists.txt
benchmark/micro_benchmark/check_elimination/: main.c
benchmark/micro_benchmark/check_modification/: main.c
benchmark/micro_benchmark/global_1d_array/: main.c
benchmark/micro_benchmark/malloc_1d_array/: main.cpp
benchmark/micro_benchmark/static_1d_array/: main.c
benchmark/micro_benchmark/test/: loop.cpp  loop.cpp.txt  looptest.cpp  main.cpp  main2.cpp  test3.cpp
benchmark/micro_benchmark/test_mem2reg/: main.c
script/: run_pass.sh
src/: ArrayAccessDetection.cpp  ArrayAccessDetection.h  BoundCheckInsertion.cpp  BoundCheckInsertion.h  BoundCheckOptimization.cpp  BoundCheckOptimization.h  BoundPredicate.cpp  BoundPredicate.h  BoundPredicateSet.cpp  BoundPredicateSet.h  CMakeLists.txt  CommonDef.cpp  CommonDef.h  Effect.h  Registry.cpp  Stats.cpp  Stats.h  SubscriptExpr.cpp  SubscriptExpr.h  ValueMetadataRemoval.cpp  ValueMetadataRemoval.h
stat/: _stat_baseline_size.csv  dither.txt  global_1d_array.txt  jacobi-1d.txt  merge_count.ipynb
stat/_stat_baseline/: bfs-transformed.csv  check_elimination-transformed.csv  check_modification-transformed.csv  dither-original.csv  is-original.csv  jacobi-1d-original.csv  jacobi-1d-transformed.csv
stat/_stat_check_count/: bfs.csv  bfs.txt  check_elimination.csv  check_elimination.txt  check_modification.csv  dither.csv  global_1d_array.csv  is.csv  is.txt  jacobi-1d.csv
stat_baseline/: bfs-original.csv  check_elimination-original.csv  check_modification-original.csv  dither-transformed.csv  global_1d_array-original.csv  global_1d_array-transformed.csv  is-transformed.csv
stat_compile_time/: bfs.txt  check_modification.txt  is.txt  static_1d_array.txt
stat_gupta/: bfs-original.csv  bfs-transformed.csv  check_elimination-original.csv  check_elimination-transformed.csv  check_modification-original.csv  check_modification-transformed.csv  check_modification.txt  dither-original.csv  dither-transformed.csv  dither.txt  global_1d_array-original.csv  global_1d_array-transformed.csv  is-original.csv  is-transformed.csv  jacobi-1d-original.csv  jacobi-1d-transformed.csv  jacobi-1d.txt
stubs/: BoundCheck.cpp  BoundCheckWithDump.cpp  build copy.sh  build.sh  builddyn.sh
tutorial/: CMakeLists.txt  InstPass.cpp  README.md  check.c  run_tutorial.sh  sum.c
